fw/core/ddi/tbor/api/tests/compile_tests/fail/wrong_field_type.stderr
error[E0308]: mismatched types
  --> tests/compile_tests/fail/wrong_field_type.rs:14:16
   |
14 |         .value("not a u8").unwrap() // ERROR: expected u8
   |          ----- ^^^^^^^^^^ expected `u8`, found `&str`
   |          |
   |          arguments to this method are incorrect
   |
note: method defined here
  --> tests/compile_tests/fail/wrong_field_type.rs:8:5
   |
 6 | #[tbor(opcode = 0x04)]
   | ----------------------
 7 | pub struct TypeReq {
 8 |     value: u8,
   |     ^^^^^
